# scouting-troop-stats

./: .gitignore  README.md  dashboard.html  pyproject.toml  sample_troop.db  scoutbook-api.md
macos-app/: README.md  project.yml
macos-app/ScoutingTroopStats/: AppState.swift  Info.plist  ScoutingTroopStats.entitlements  ScoutingTroopStatsApp.swift
macos-app/ScoutingTroopStats/Services/: DatabaseService.swift  ScoutingAPIService.swift  ScoutingURLSchemeHandler.swift  SyncService.swift
macos-app/ScoutingTroopStats/Views/: ContentView.swift  DashboardView.swift  LauncherView.swift  SyncProgressView.swift
native-app/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js  sync-runner.spec
native-app/app/: launcher.css  launcher.html  launcher.js
native-app/build-resources/: icon.icns
native-app/build-scripts/: build-python-linux.sh  build-python-mac.sh  build-python-win.bat
native-app/python-bridge/: sync_runner.py
native-app/scripts/: generate-icons.py
src/bsa_db/: api.py  cli.py  db.py  mcp_server.py
src/scouting_db/: api.py  cli.py  db.py  mcp_server.py  native_sync.py  queries.py
tests/: conftest.py  test_api.py  test_db.py  test_queries.py
