[project]
name = "bsa-db"
version = "0.1.0"
description = "BSA Troop Analytics CLI - download scout advancement data and run troop-wide queries"
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]

[project.scripts]
bsa = "bsa_db.cli:main"
bsa-mcp = "bsa_db.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bsa_db"]
