[project]
name = "scouting"
version = "0.1.0"
description = "Scouting Troop Analytics CLI - download Scout advancement data and run troop-wide queries"
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]

[project.scripts]
scouting = "scouting_db.cli:main"
scouting-mcp = "scouting_db.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scouting_db"]
