[project]
name = "scouting"
version = "0.1.0"
description = "Scouting Troop Analytics CLI - download Scout advancement data and run troop-wide queries"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "mcp[cli]",
]

[project.scripts]
scouting = "scouting_db.cli:main"
scouting-mcp = "scouting_db.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scouting_db"]
